--- a/django/index.html
+++ b/django/index.html
@@ -43,10 +43,61 @@
         </div>
     </header>
     <main class="main">
-        <div class="hero">히어로</div>
-        <div class="main-content">메인컨텐츠</div>
-        <div class="side-content">사이드컨텐츠</div>
+        <div class="hero">
+            <div class="container">
+                <p class="hero1">Django makes it easier to build better Web
+                    apps more quickly and with less code.</p>
+                <p><a href="#" class="hero2">Get started with Django</a></p>
+            </div>
+        </div>
+        <div class="container-float">
+            <div class="main-content">
+                <h2 class="main-title">Meet Django</h2>
+
+                <h2 class="main-title">Stay in the loop</h2>
+                <p class="main-desc">Subscribe to one of our mailing lists to stay up to date with everything in the Django community:</p>
+                <div class="mailing-layout">
+                    <div class="mailing">
+                        <h3 class="mailing-title"><a href="#">Using Django</a></h3>
+                        <p class="mailing-desc">Get help with Django and follow announcements.</p>
+                        <form action="#" class="frm1">
+                            <input type="email" name="email1" id="email1" placeholder="Enter email">
+                            <button type="submit" class="btn1"><img src="../img/111.jpg"></button>
+                        </form>
+                    </div>
+                    <div class="mailing">
+                        <h3 class="mailing-title"><a href="#">Using Django</a></h3>
+                        <p class="mailing-desc">Get help with Django and follow announcements.</p>
+                        <form action="#" class="frm1">
+                            <input type="email" name="email2" id="email2" placeholder="Enter email">
+                            <button type="submit" class="btn1"><img src="../img/111.jpg"></button>
+                        </form>
+                    </div>
+                </div>
+                <p class="main-ed">We have a few other specialized lists (mentorship, i18n, ...). You can find more information about them in our mailing list documentation.</p>
+            </div>
+            <div class="side-content">
+                <div class="container-side-cta">
+                    <a href="#" class="side-cta"><em>Download</em> latest release: 3.1.2</a>
+                    <a href="#" class="more">DJANGO DOCUMENTATION</a>
+                </div>
+                <div class="info-latest-news">
+                    <h2 class="infos-title">Latest news</h2>
+                    <article class="news-article">
+                        <h3 class="news-title"><a href="#">Django Technical Board Election Results 2020</a>
+                        </h3>
+                        <p class="news-desc">Django Technical Board Election Results for the inaugural 2020 election.</p>
+                        <p class="news-meta">Posted by <span>Frank Wiles</span> on 10월 1, 2020
+                        </p>
+                    </article>
+                    <a href="#">more news > </a>
+                </div>
+                <div class="infos get-involved"></div>
+            </div>
+        </div>
     </main>
-    <footer class="footer">푸터</footer>
+    <footer class="footer">
+        <div class="container">푸터</div>
+    </footer>
 </body>
 </html>
