--- a/django/index.html
+++ b/django/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>django</title>
+    <link rel="stylesheet" href="normalize.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
@@ -47,13 +49,20 @@
             <div class="container">
                 <p class="hero1">Django makes it easier to build better Web
                     apps more quickly and with less code.</p>
-                <p><a href="#" class="hero2">Get started with Django</a></p>
+                <p><a href="#" class="hero2 main-hero2">Get started with Django</a></p>
             </div>
         </div>
         <div class="container-float">
             <div class="main-content">
                 <h2 class="main-title">Meet Django</h2>
-
+                <p>Django is a high-level Python Web framework that encourages rapid development and clean, pragmatic design. Built by experienced developers, it takes care of much of the hassle of Web development, so you can focus on writing your app without needing to reinvent the wheel. It’s free and open source.</p>
+                <h3>Ridiculously fast.</h3>
+                <p>
+Django was designed to help developers take applications from concept to completion as quickly as possible.</p>
+                <h3>Reassuringly secure.</h3>
+                <p>Django takes security seriously and helps developers avoid many common security mistakes.</p>
+                <h3>Exceedingly scalable.</h3>
+                <p>Some of the busiest sites on the Web leverage Django’s ability to quickly and flexibly scale.</p>
                 <h2 class="main-title">Stay in the loop</h2>
                 <p class="main-desc">Subscribe to one of our mailing lists to stay up to date with everything in the Django community:</p>
                 <div class="mailing-layout">
@@ -66,22 +75,24 @@
                         </form>
                     </div>
                     <div class="mailing">
-                        <h3 class="mailing-title"><a href="#">Using Django</a></h3>
-                        <p class="mailing-desc">Get help with Django and follow announcements.</p>
+                        <h3 class="mailing-title"><a href="#">Contributing to Django</a></h3>
+                        <p class="mailing-desc">Contribute to the development of Django itself.</p>
                         <form action="#" class="frm1">
                             <input type="email" name="email2" id="email2" placeholder="Enter email">
                             <button type="submit" class="btn1"><img src="../img/111.jpg"></button>
                         </form>
                     </div>
                 </div>
-                <p class="main-ed">We have a few other specialized lists (mentorship, i18n, ...). You can find more information about them in our mailing list documentation.</p>
+                <p class="main-ed">
+                    We have a few other specialized lists (mentorship, i18n, ...). You can find more information about them in our mailing list documentation.
+                </p>
             </div>
             <div class="side-content">
                 <div class="container-side-cta">
-                    <a href="#" class="side-cta"><em>Download</em> latest release: 3.1.2</a>
+                    <a href="#" class="side-hero2"><em>Download</em> latest release: 3.1.2</a>
                     <a href="#" class="more">DJANGO DOCUMENTATION</a>
                 </div>
-                <div class="info-latest-news">
+                <div class="infos-latest-news">
                     <h2 class="infos-title">Latest news</h2>
                     <article class="news-article">
                         <h3 class="news-title"><a href="#">Django Technical Board Election Results 2020</a>
@@ -90,7 +101,15 @@
                         <p class="news-meta">Posted by <span>Frank Wiles</span> on 10월 1, 2020
                         </p>
                     </article>
-                    <a href="#">more news > </a>
+                    <article class="news-article">
+                        <h3 class="news-title"><a href="#">Django bugfix release: 3.1.2</a>
+                        </h3>
+                        <p class="news-desc">Today the Django project issued a bugfix release for the 3.1 release series.</p>
+                        <p class="news-meta">Posted by <span>Mariusz Felisiak</span>
+                            on 10월 1, 2020
+                        </p>
+                    </article>
+                    <a href="#">more news ></a>
                 </div>
                 <div class="infos get-involved"></div>
             </div>
