--- a/django/index.html
+++ b/django/index.html
@@ -11,6 +11,7 @@
     <header class="header">
         <div class="container">
             <h1 class="logo">django</h1>
+            <span>DjangoThe web framework for perfectionists with deadlines.</span>
             <nav class="nav">
                 <ul class="list">
                     <li class="list-item">
@@ -56,13 +57,30 @@
             <div class="main-content">
                 <h2 class="main-title">Meet Django</h2>
                 <p>Django is a high-level Python Web framework that encourages rapid development and clean, pragmatic design. Built by experienced developers, it takes care of much of the hassle of Web development, so you can focus on writing your app without needing to reinvent the wheel. It’s free and open source.</p>
-                <h3>Ridiculously fast.</h3>
-                <p>
-Django was designed to help developers take applications from concept to completion as quickly as possible.</p>
-                <h3>Reassuringly secure.</h3>
-                <p>Django takes security seriously and helps developers avoid many common security mistakes.</p>
-                <h3>Exceedingly scalable.</h3>
-                <p>Some of the busiest sites on the Web leverage Django’s ability to quickly and flexibly scale.</p>
+               <table>
+                   <tr>
+                       <td>
+                           <img src="./img/m1.jpg">
+                       </td>
+                       <td>
+                           <h3>Ridiculously fast.</h3>
+                            <p>Django was designed to help developers take applications from concept to completion as quickly as possible.</p>
+                       </td>
+                   </tr>
+                   <tr>
+                       <td><img src="./img/m2.jpg"></td>
+                       <td>
+                           <h3>Reassuringly secure.</h3>
+                            <p>Django takes security seriously and helps developers avoid many common security mistakes.</p></td>
+                   </tr>
+                   <tr>
+                       <td><img src="./img/m3.jpg"></td>
+                       <td>
+                           <h3>Exceedingly scalable.</h3>
+                            <p>Some of the busiest sites on the Web leverage Django’s ability to quickly and flexibly scale.</p>
+                       </td>
+                   </tr>
+                </table>
                 <h2 class="main-title">Stay in the loop</h2>
                 <p class="main-desc">Subscribe to one of our mailing lists to stay up to date with everything in the Django community:</p>
                 <div class="mailing-layout">
@@ -116,7 +134,58 @@ Django was designed to help developers take applications from concept to complet
         </div>
     </main>
     <footer class="footer">
-        <div class="container">푸터</div>
+        <div class="fcontainer1">
+            <div class="container">
+                <div class="fcontent1">
+                    <h3>Learn More</h3>
+                    <ul>
+                        <li><a href="#">About Django</a></li>
+                        <li><a href="#">Getting Started with Django</a></li>
+                        <li><a href="#">Team Organization</a></li>
+                        <li><a href="#">Django Software Foundation</a></li>
+                        <li><a href="#">Code of Conduct</a></li>
+                        <li><a href="#">Diversity Statement</a></li>
+                    </ul>
+                </div>
+                <div class="fcontent1">
+                    <h3>Get Involved</h3>
+                    <ul>
+                        <li><a href="#">Join a Group</a></li>
+                        <li><a href="#">Contribute to Django</a></li>
+                        <li><a href="#">Submit a Bug</a></li>
+                        <li><a href="#">Report a Security Issue</a></li>
+
+                    </ul>
+                </div>
+                <div class="fcontent1">
+                    <h3>Follow Us</h3>
+                    <ul>
+                        <li><a href="#">GitHub</a></li>
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">News RSS</a></li>
+                        <li><a href="#">Django Users Mailing List</a></li>
+                    </ul>
+                </div>
+                <div class="fcontent1">
+                    <h3>Support Us</h3>
+                    <ul>
+                        <li><a href="#">Sponsor Django</a></li>
+                        <li><a href="#">Official merchandise store</a></li>
+                        <li><a href="#">Amazon Smile</a></li>
+                        <li><a href="#">Benevity Workplace Giving Program</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="fcontainer2">
+            <div class="container">
+                <div class="fcontent2"><h1>django</h1></div>
+                <div class="fcontent2">Hosting by</div>
+                <div class="fcontent2">Design by</div>
+                <p>© 2005-2020 Django Software Foundation and individual contributors. Django is a registered trademark of the Django Software Foundation.</p>
+            </div>
+        </div>
     </footer>
+
 </body>
 </html>
