--- a/django/index.html
+++ b/django/index.html
@@ -110,6 +110,11 @@
                     <a href="#" class="side-hero2"><em>Download</em> latest release: 3.1.2</a>
                     <a href="#" class="more">DJANGO DOCUMENTATION</a>
                 </div>
+                <div class="infos-support">
+                    <h2 class="infos-title">Support Django!</h2>
+                    <img src="./img/heart.jpg"/>
+                    <p><a>Gerardo Thomas donated to the Django Software Foundation to support Django development. Donate today!</a></p>
+                </div>
                 <div class="infos-latest-news">
                     <h2 class="infos-title">Latest news</h2>
                     <article class="news-article">
