--- a/html/js1.html
+++ b/html/js1.html
@@ -7,7 +7,7 @@
     <script>
         alert('hi! 자바스크립트');
     </script>
-    <script src="ex1.js"></script>
+    <script src="../ex1.js"></script>
 </head>
 <body>
     <h1>자바스크립트</h1>
