--- a/html/js15.html
+++ b/html/js15.html
@@ -104,7 +104,7 @@
                 document.write('<h4>['+friend[i][j]+']</h4>');
             }
         }
-        */
+
 
         s1 = "심청,16세,착함";
         a1 = s1.split(','); //Array로 반환
@@ -112,6 +112,16 @@
         for(i=0;i<a1.length;i++){
             document.write('<h4>'+a1[i]+'</h4>');
         }
+         */
+        //Math
+        document.write('<h4>'+Math.max(100,10)+'<h4>');
+        document.write('<h4>'+Math.min(100,10)+'<h4>');
+        document.write('<h4>'+Math.PI+'<h4>');
+        document.write('<h4>'+Math.round(3.7)+'<h4>');
+        document.write('<h4>'+Math.ceil(3.7)+'<h4>');
+        document.write('<h4>'+Math.floor(3.7)+'<h4>');
+        document.write('<h4>'+Math.abs(-1234)+'<h4>');
+        document.write('<h4>0~1 사이의 실수'+Math.random()+'<h4>');
 
     </script>
 </head>
